[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -22,7 +22,6 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 .section{margin-bottom:10px;min-height:10px}
 
-.ofh{overflow:hidden;}
 .fl{float:left !important}
 .fr{float:right !important}
 
@@ -271,10 +270,29 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_tabmenu .defaultbox:first-child{margin-top:0;}
 
 /* button */
+/*
 .btn_cm{position:relative;display:inline-block;padding:0 1px 0 0;margin:0 0 0 3px;background:url(/cm/images/contents/bg_btn_cm.gif) no-repeat 100% 0;vertical-align:middle}
 .btn_cm a{position:relative;display:inline-block;padding:4px 17px 3px 17px;height:15px;line-height:11px;font-weight:bold;color:#fff;background:url(/cm/images/contents/bg_btn_cm_f.gif) no-repeat}
+*/
+
+.btn_cm{position:relative;display:inline-block;padding:0 1px 0 0;margin:0 0 0 3px}
+.btn_cm a{
+height: 24px;
+    line-height: 24px;
+    padding: 0 12px 0 2px;
+    text-indent: 10px;
+    color: #ffffff;
+    font-weight: bold;
+    display: inline-block;
+    background: #5b5b5b;
+    border: 1px solid #3d3d3d;
+    border-radius: 3px;
+    box-sizing: border-box;
+	}
 .btn_cm.w2anchor_disabled{}
 .btn_cm.w2anchor_disabled a{}
+
+
 
 
 /** searchbox button **/
@@ -577,7 +595,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 .banner{overflow:hidden; border:1px solid #cfd8dd; background:#fff !important; margin:20px 0 ;}
 
-/* login Page */
+/* login Page 
 .login_wrap{position:relative; width:100%;min-width:320px;height:100%;}
 .login_wrap .bg_img{position:absolute; top:25%; left:0; right:0; height:365px; background: #70787e url(/cm/images/contents/login_visual.png) no-repeat center top;}
 .login_wrap .bg_img .bg_logo{position:absolute; left: 50%;top: -140px; width:719px; height: 117px; background: url(/cm/images/login/login_logo.png) no-repeat; margin-left: -310px;}
@@ -616,6 +634,65 @@ a:hover,a:active,a:focus{text-decoration:none}
 .login_wrap a.logo_kaia{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/kaia_ci.png') no-repeat 0 0;}
 .login_wrap a.logo_sejong{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/sejong_ci.png') no-repeat 0 0;}
 .login_wrap a.logo_krri{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/krri_logo.png') no-repeat 0 0;}
+ */
+
+/* login Page  수정 */
+.login_wrap{position:relative;width:100%;min-width:1400px;height:100%;overflow: hidden;background: #f6f6f6;}
+.login_wrap:before {content: '';width: 839px;height: 965px;background: url('/cm/images/add/icon_poly01.png') 0 0 no-repeat;position: absolute;left: -9%;top: -45%;-webkit-transform: scale(1) rotate(-60deg);-ms-transform: scale(1) rotate(-20deg);transform: scale(1) rotate(-20deg);z-index: 0;-webkit-animation: spin1 50s linear infinite;animation: spin1 50s linear infinite;-webkit-transform-origin: 50% 50%;-ms-transform-origin: 50% 50%;transform-origin: 50% 50%;}
+.login_wrap:after {content: '';background: url('/cm/images/add/icon_poly02.png') 50% 50% no-repeat;position: absolute;right: -29%;bottom: -98%;-webkit-transform: scale(2.2) rotate(20deg);-ms-transform: scale(2.2) rotate(20deg);transform: scale(2.2) rotate(20deg);z-index: -1;/* -webkit-animation: spin 50s linear infinite;animation: spin 50s linear infinite; */-webkit-transform-origin: 50% 50%;-ms-transform-origin: 50% 56%;transform-origin: 50% 50%;width: 681px;height: 718px;z-index: 1;}
+
+	@-webkit-keyframes spin1 {
+		0% {
+			-webkit-transform: scale(1) rotate(20deg);
+			transform: scale(1) rotate(20deg);right: -2%;
+		}
+		50% {
+			-webkit-transform:  scale(1) rotate(1turn);
+			transform:  scale(1) rotate(1turn);right: 0%;
+		}
+		100% {
+			-webkit-transform: scale(1) rotate(20deg);
+			transform: scale(1) rotate(20deg);right: -2%;
+		}
+	}
+	@keyframes spin1 {
+		0% {
+			-webkit-transform: scale(1) rotate(20deg);
+			transform: scale(1) rotate(20deg);right: -2%;
+		}
+		50% {
+			-webkit-transform:  scale(1) rotate(1turn);
+			transform:  scale(1) rotate(1turn);right: 0%;
+		}
+		100% {
+			-webkit-transform: scale(1) rotate(20deg);
+			transform: scale(1) rotate(20deg);right: -2%;
+		}
+	}
+
+
+.bg_img {    background:  #cf0500 url(/cm/images/add/bg_loginbox01.png) right 0 no-repeat; width: 995px;height: 553px;border-radius: 15px;position: absolute;top: 220px;left: 50%;transform: translateX(-50%);overflow: hidden;box-shadow: 0 0 19px rgb(118 118 118 / 30%);}
+.bg_img  .box {width: 496px;height: 100%;background: white;box-sizing: border-box;padding: 92px 87px;}
+.bg_img  .box:before {content:'LOGIN';display:block;color: #cf0500;font-size: 46px;text-align: center;margin: 0 0  24px 0;}
+.bg_img  .box .w2input, .w2checkcombobox, .w2inputCalendar {width:100%;border-radius:50px;border: 1px solid #e6e6e6;height: 42px;box-sizing: border-box;margin: 5px 0;}
+
+.question {}
+ul.question {text-align: center;border: 1px solid #e6e6e6;display: block;overflow: hidden;border-radius: 30px;height: 42px;position: relative;background: #f6f6f6;width: 100%;box-sizing: border-box;margin: 0 0 8px 0;}
+ul.question:after,
+ul.question.right:after {content: "";display: block;clear: both;position: absolute;background: #dd2c32;height: 100%;width: 50%;margin: 0;z-index: -1;border-radius: 30px;/* border:1px solid #dd2c32; */z-index: 11;}
+ul.question:after {left:0;top:0;transition: transform 150ms ease-in-out;transition: all 0.3s;}
+ul.question.right:after {/* transition: transform 150ms ease-in-out; *//* transition: all 0.3s; */left: 50%;}
+ul.question li {float:left;width: 50%;text-align: center;}
+ul.question li.on a {color:#fff;font-weight: 700;}
+ul.question li a {display: block;line-height: 40px;color: #5e5e5e;z-index: 111;position: relative;font-size: 14px;text-align: center;box-sizing: border-box;}
+ul.question li a:hover {font-weight:bold;}
+.ofh {text-align:center;margin: 8px 10px 0px 20px; float:left;}
+.login_msg {text-align:left;}
+
+.login_wrap .login_btn{position:absolute;bottom: 89px;left: 90px;margin:0;}
+.login_wrap .login_btn a{display:block;height: 50px;line-height: 50px;background: #dd2c32;border-radius: 5px;width: 316px;color: #fff;font-size: 17px;text-align: center;border-radius: 50px;}
+.bg_img  .login_btn {}
+.org_logo {width: 995px;height: 50px;position: absolute;bottom: 110px;left: 50%;transform: translateX(-50%);}
 
 /*********************************** LAYOUT **************************************/
 #wrap{position:relative;width:100%;min-width:1016px;height:100%;min-height:300px;margin:0;padding:0}
