--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -199,13 +199,13 @@
 /* 서브 헤더 */
 .gr_sub_header{position:relative;margin:0;margin-bottom:0px;}
 .gr_sub_header .btn_sub_generator{position:absolute;right:2px; height:50px}
-.gr_sub_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px;}
+.gr_sub_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px !important;}
 .gr_sub_header .defaultbox{float:left; position:relative; margin-right: 7px;}
 .gr_sub_header .check{float:left; position:absolute; margin-top: 3px; min-width: 200px;}
 
 .gr_map_header{position:relative;margin:0; margin-bottom:2px; height:23px}
 .gr_map_header .btn_sub_generator{position:absolute;right:2px;top:-1px}
-.gr_map_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px;}
+.gr_map_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px !important;}
 .gr_map_header .defaultbox{float:left; position:relative; margin-right: 7px;}
 .gr_map_header .check{float:left; position:absolute; margin-top: 3px; min-width: 200px;}
 
