[양현우] 실시간 위치정보 모니터링 디스패치 메시지 송수신 처리, 오버레이별 메소드 분리

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -754,6 +754,23 @@ a:hover,a:active,a:focus{text-decoration:none}
     /* width: 190px; */
 }
 
+.dsptchMessagePopup {
+    background: #fff;
+    position: relative;
+/*     bottom: 57px;
+    left:2px; */
+    bottom: 45px;
+    left: -125px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;	
+    /* position: absolute;
+    left: 761px;
+    top: 407px;	 */
+    width: 250px;	
+}
+
 .clickoverlay:after {
     content: '';
     position: absolute;
