[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -143,7 +143,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 .defaultbox{width:100%;min-height:15px; position:relative;margin:0px 0 4px;overflow:hidden;}
 /* .defaultbox .df_tt{float:left;color:#333;padding: 0 0 0 13px;margin:4px 0 2px 5px;font-size:14px;font-weight:600;line-height:15px;background: url(/cm/images/add/gb_df_tt_n.gif) no-repeat 0 2px;} */
- .defaultbox .df_tt {float:left;color:#333;padding: 0 0 0 22px;margin:4px 0 2px 5px;font-size:14px;font-weight:600;line-height:15px;position: relative;}
+ .defaultbox .df_tt {float:left;color:#333;padding: 0 0 0 22px;margin: 4px 0 2px 2px;font-size:14px;font-weight:600;line-height:15px;position: relative;}
  .defaultbox .df_tt:after {content:'';display:block;width: 9px;height: 9px;background: #333333;position: absolute;top: 5px;left: 8px;border-radius: 0;opacity: 0.8;}
  .defaultbox .df_tt:before {content:'';display:block;width: 9px;height: 9px;background: #eb4545;position: absolute;top: 0;left: 2px;opacity: 1;box-sizing: border-box;}
 
@@ -179,9 +179,9 @@ a:hover,a:active,a:focus{text-decoration:none}
 .w2table_sb.w2table.req{margin-right:0 !important; padding-left:0 !important;}
 
 /* table */
-.tb {width:100%;border-top: 2px solid rgb(51 51 51);border-right:1px solid #b0b2b1;/* margin-bottom:10px; */}
-.tb .w2tb_th,.tb .w2tb_td{height:19px;border:0;border-left:1px solid #b0b2b1;border-bottom:1px solid #b0b2b1;box-sizing:border-box;}
-.tb tbody .w2tb_th{line-height:19px;color:#3b3b3b;padding:3px 4px 6px 8px;background: #f7f7f7;text-align:left;}
+.tb {width:100%;border-top: 2px solid rgb(51 51 51);/* border-right:1px solid #b0b2b1; *//* margin-bottom:10px; */}
+.tb .w2tb_th,.tb .w2tb_td{height:19px;border:0;/* border-left:1px solid #b0b2b1; */border-bottom: 1px solid #e0e0e0;box-sizing:border-box;}
+.tb tbody .w2tb_th{/* line-height: 21px; */color:#3b3b3b;padding: 5px 4px 5px 8px;background: #f7f7f7;text-align:left;}
 .tb tbody .w2tb_th.tac{text-align:center}
 
 .tb tbody .w2tb_th.req:after{content: ' ';background:url(/cm/images/contents/bul_req.png) no-repeat right center;width:8px;height:5px;display:inline-block;}
@@ -192,14 +192,14 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tb .w2textarea{width:100%;height:50px;}
 .tb input[type="checkbox"], .tableListH.w2tb input[type="radio"] { border: none;}
 .tb .w2inputCalendar_div.req{background:none;padding-left:0 !important}
-.tb .w2inputCalendar_div.req .w2inputCalendar_divInput{background:#fffdd8;padding-left:0 !important;text-align:center;}
+.tb .w2inputCalendar_div.req .w2inputCalendar_divInput{background:rgb(243,248,255);padding-left:0 !important;text-align:center;}
 .tb .w2inputCalendar_div_img .w2inputCalendar_button{top:0 !important;}
-.tb .w2input.req{background:#fffdd8;padding-left:0 !important;}
+.tb .w2input.req{background: #fff0ee;padding-left:0 !important;}
 .tb .w2textarea.req,
-.tb .w2selectbox.req{background:#fffdd8;margin-right:0 !important; padding-left:0 !important;}
+.tb .w2selectbox.req{background:rgb(243,248,255);margin-right:0 !important; padding-left:0 !important;}
 .tb .w2selectbox.req .w2selectbox_focus .w2selectbox_label,
-.tb .w2selectbox.req .w2selectbox_over .w2selectbox_label{background:#fffdd8;padding-left:0 !important}
-.w2inputCalendar_input.req{background:#fffdd8;padding-left:0 !important;}
+.tb .w2selectbox.req .w2selectbox_over .w2selectbox_label{background:rgb(243,248,255);padding-left:0 !important}
+.w2inputCalendar_input.req{background:rgb(243,248,255);padding-left:0 !important;}
 
 .tb .w2tb_th.listUp {background:#e3e6ea url(/cm/images/contents/board_viewList_up.png) no-repeat right 12px !important}
 .tb .w2tb_th.listDown {background:#e3e6ea url(/cm/images/contents/board_viewList_down.png) no-repeat right 13px !important}
@@ -233,21 +233,25 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid .gridHeaderTableDefault{border:0;border-right:1px solid #c8cad0;border-bottom:1px solid #c8cad0}
 .cm_grid thead.gridHeaderTableDefault{border:0}
 .cm_grid nobr{display:inline-block}
-.cm_grid th.gridHeaderTDDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b;background: #f2f3f6;height:27px;}
+.cm_grid th.gridHeaderTDDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b;background: #f2f3f6;height:27px;padding: 2px 0;}
 .cm_grid th.req{color:#e74c3c;}
 .cm_grid tr:first-child th.gridHeaderTDDefault{border-top:0;height:25px;}
 .cm_grid .gridBodyDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b}
 .cm_grid .gridFooterTDDefault{background: #f7f7f7;border-width:0 0 0 0;}
 .cm_grid td.gridBodyDefault{height:25px;}
 .cm_grid button.w2inputCalendar_button {border:0; border-radius:0 !important;}
-.cm_grid .req{background-color:#fffdd8;}
+
+.cm_grid .gridFooterTDDefault {border:0 !important;}
+
+.cm_grid .focusedTd {background-color: #ffefea !important;;}
 /*
 .cm_grid .gridBodyDefault button{background: gainsboro; border-radius: 10px;  cursor: pointer;}
 .cm_grid .gridBodyDefault button:hover{background:skyblue;} */
 
 .cm_grid .gridBodyDefault button{background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px;height: auto !important;background: #2539a5;color: #fff;border: 1px solid #1a237e;box-shadow: none;}
 .cm_grid .gridBodyDefault button:hover{background: #2847ff;border-color: #3f51b5;}
-.cm_grid .req{background-color:#fffdd8;}
+/* .cm_grid .req{background-color:#fffdd8;} */
+.cm_grid .req{background-color:rgb(243,248,255);}
 
 .table_btn {background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px;height: auto !important;background: #2539a5;color: #fff;border: 1px solid #1a237e;box-shadow: none;}
 .table_btn :hover{background: #2847ff;border-color: #3f51b5;}
@@ -569,7 +573,7 @@ height: 24px;
 .w2tb_td ul{border:solid 1px #ced4d9; position:relative;}
 .w2tb_td li{padding:5px; font-weight:bold;}
 .w2tb_td li.bg{background-color:#f7f7f7; top:0;}
-.w2tb_td textarea{padding: 5px 5px 5px 5px;}
+.w2tb_td textarea{padding: 5px 5px 5px 5px;margin: 3px 0;}
 
 .titlelistbox .titlelist_tit{ border-top:2px solid #6d7580;border-bottom:1px solid #b9c0ca;background:url(/cm/images/contents/icon_open.png) no-repeat right 15px;}
 .titlelistbox .btn_titlelist{display: block;font-weight: bold;padding: 10px 0px 10px 6px;}
@@ -671,28 +675,44 @@ height: 24px;
 	}
 
 
-.bg_img {    background:  #cf0500 url(/cm/images/add/bg_loginbox01.png) right 0 no-repeat; width: 995px;height: 553px;border-radius: 15px;position: absolute;top: 220px;left: 50%;transform: translateX(-50%);overflow: hidden;box-shadow: 0 0 19px rgb(118 118 118 / 30%);}
+.bg_img {background: url(/cm/images/add/bg_loginbox01.png) right 0 no-repeat;width: 995px;height: 553px;border-radius: 15px;position: absolute;top: 191px;left: 50%;transform: translateX(-50%);overflow: hidden;box-shadow: 0 0 19px rgb(118 118 118 / 30%);}
+.bg_img_bis {background:  #cf0500 url(/cm/images/add/bg_loginbox02.png) right 0 no-repeat !important;}
 .bg_img  .box {width: 496px;height: 100%;background: white;box-sizing: border-box;padding: 92px 87px;}
-.bg_img  .box:before {content:'LOGIN';display:block;color: #cf0500;font-size: 46px;text-align: center;margin: 0 0  24px 0;}
+.bg_img  .box:before {content:'LOGIN';display:block;color: #323232;font-size: 46px;text-align: center;margin: 0 0  24px 0;}
 .bg_img  .box .w2input, .w2checkcombobox, .w2inputCalendar {width:100%;border-radius:50px;border: 1px solid #e6e6e6;height: 42px;box-sizing: border-box;margin: 5px 0;}
 
 .question {}
 ul.question {text-align: center;border: 1px solid #e6e6e6;display: block;overflow: hidden;border-radius: 30px;height: 42px;position: relative;background: #f6f6f6;width: 100%;box-sizing: border-box;margin: 0 0 8px 0;}
 ul.question:after,
-ul.question.right:after {content: "";display: block;clear: both;position: absolute;background: #dd2c32;height: 100%;width: 50%;margin: 0;z-index: -1;border-radius: 30px;/* border:1px solid #dd2c32; */z-index: 11;}
-ul.question:after {left:0;top:0;transition: transform 150ms ease-in-out;transition: all 0.3s;}
+ul.question.right:after {content: "";display: block;clear: both;position: absolute;background: #3a3a3a;height: 100%;width: 50%;margin: 0;z-index: -1;border-radius: 30px;/* border:1px solid #dd2c32; */z-index: 11;}ul.question:after {left:0;top:0;transition: transform 150ms ease-in-out;transition: all 0.3s;}
 ul.question.right:after {/* transition: transform 150ms ease-in-out; *//* transition: all 0.3s; */left: 50%;}
 ul.question li {float:left;width: 50%;text-align: center;}
 ul.question li.on a {color:#fff;font-weight: 700;}
 ul.question li a {display: block;line-height: 40px;color: #5e5e5e;z-index: 111;position: relative;font-size: 14px;text-align: center;box-sizing: border-box;}
 ul.question li a:hover {font-weight:bold;}
-.ofh {text-align:center;margin: 8px 10px 0px 20px; float:left;}
-.login_msg {text-align:left;}
+
+.ofh {/* text-align:center; */margin: 7px 0px 0px 20px;float:left;}
+.ofh_msg {float: left;margin: 6px 0;}
+.ofh_msg + span {}
+.login_msg {float: left;margin: 2px 0px 0px 38px;}
 
 .login_wrap .login_btn{position:absolute;bottom: 89px;left: 90px;margin:0;}
 .login_wrap .login_btn a{display:block;height: 50px;line-height: 50px;background: #dd2c32;border-radius: 5px;width: 316px;color: #fff;font-size: 17px;text-align: center;border-radius: 50px;}
+.login_wrap .login_btn a:hover {background: #b10006;}
 .bg_img  .login_btn {}
-.org_logo {width: 995px;height: 50px;position: absolute;bottom: 110px;left: 50%;transform: translateX(-50%);}
+
+.org_logo {width: 995px;height: 50px;position: absolute;bottom: 144px;left: 50%;transform: translateX(-50%);}
+.org_logo > a {background: url(/cm/images/add/icon_login.png) no-repeat;display: block;float: left;height: 97px;width: 205px;margin: 0 21px;}
+.org_logo > a.logo_molit {background-position:0 0 }
+.org_logo > a.logo_kaia {background-position: -190px 0px;}
+.org_logo > a.logo_sejong {background-position: -390px 0;}
+.org_logo > a.logo_krri {background-position: -610px 0;}
+
+
+
+
+
+
 
 /*********************************** LAYOUT **************************************/
 #wrap{position:relative;width:100%;min-width:1016px;height:100%;min-height:300px;margin:0;padding:0}
