--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -46,6 +46,7 @@
 .grdc_bms_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
 .grdc_brtMain {display:grid; justify-items: center; grid-template-columns:auto}
 .grdc_1f_25_1f {display:grid; grid-template-columns:1fr 25px 1fr;}
+.grdc_if_60_if {display:grid; grid-template-columns:1fr 60px 1fr;}
 
 .grdc_a {display:grid; grid-template-columns:auto}
 .grdc_500_a {display:grid; grid-template-columns:500px auto;}
