--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -331,7 +331,9 @@ body {
 .infobox .info_tit.department_tit{color:#fff;padding-right:10px}
 .infobox .w2input{border:1px solid #747578;background:#3c404a;color:#fff}
 .infobox .logout{display:inline-block;width:68px;height:23px;padding:0;margin:0 0 0 5px;border:0;color:#fff;line-height:23px;background: #eb4545;border-radius:13px;-moz-border-radius:13px;vertical-align:middle;border: 1px solid #fff;}
+.infobox .logout:hover {background: #ba1313;}
 .infobox .changePassword{display:inline-block;width:88px;height:23px;padding:0;margin:0;border:0;color:#fff;line-height:23px;background: url('/cm/images/add/icon_edit.png') no-repeat right 5px;vertical-align:middle;padding: 0 11px 0 0;margin: 0 5px;}
+.infobox .changePassword:hover {text-decoration:underline;}
 
 .gmbox{position:absolute;top:12px;right:19px;height:20px;}
 .gmbox > a{position:relative;display:inline-block;padding:0;margin:0 0 0 7px;width:21px;height:21px;font-size:0;overflow:hidden;text-indent:-9999px;vertical-align:middle}
@@ -528,11 +530,9 @@ body {
     top: 20px;
 }
 .bms_visual{
-	background-image: url('/cm/images/bms/bms_visual.png');
-	/*     background-image: url(/cm/images/brt/bms_visual.png); */
+	background: url('/cm/images/bms/bms_visual.png') left bottom no-repeat;
 	border: 1px solid #ced4d9;
 	width: 100%;
-	background-repeat: no-repeat;
 	object-fit: cover;
 	height: 720px;
 	width: 894px;
@@ -546,7 +546,7 @@ body {
 	box-sizing: border-box;
 }
 
-.bms_visual:before {background-image: url('/cm/images/bms/bms_visual_tle.png');content:'';display:block;width: 424px;height: 88px;margin: 49px auto 0;}
+.bms_visual:before {background-image: url('/cm/images/bms/bms_visual_tle.png');content:'';display:block;width: 424px;height: 88px;margin: 32px auto 8px;}
 .bms_main_link > ul {
     text-align: center;
 }
@@ -609,7 +609,7 @@ body {
 
 
 
-.bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 60px 107px;}
+.bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 50px 107px 60px 107px;}
 
 .bms_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
 .bms_cont_left li ul {position:relative;overflow:hidden;height:100px;/* border: 1px solid #ced4d9; */box-sizing: border-box;padding: 22px;}
@@ -635,6 +635,6 @@ body {
 .bms_cont_right li ul li.air_status{margin-left:20px; left:200px;}
 .bms_cont_right li ul li.air_icon{margin-left:20px; }
 
-.bms_main_link {position:relative;top: 25px;}
+.bms_main_link {position:relative;top: 2px;}
 .bms_main_link ul li{/* position:relative; *//* float:left; *//* display:inline-block; *//* height:140px; *//* width:135px; *//* background-color: white; *//* margin-right: 11px; *//* margin-left: 11px; *//* text-align: center; */}
 .bms_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;position: absolute;top: 1px;left: 36px;width: 60px;height: 60px;}
