--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1138,7 +1138,7 @@ ul.question li a:hover {font-weight:bold;}
 	background:url(/cm/images/tmap/cross.png) no-repeat;		
 }
 
-.map_busstatus
+.map_status
 {
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
@@ -1151,7 +1151,7 @@ ul.question li a:hover {font-weight:bold;}
     position: absolute;    
 }
 
-.map_busstatus th
+.map_status th
 {
 	border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
@@ -1162,7 +1162,7 @@ ul.question li a:hover {font-weight:bold;}
     font-weight: bold;
 }
 
-.map_busstatus td
+.map_status td
 {
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
@@ -1170,23 +1170,28 @@ ul.question li a:hover {font-weight:bold;}
     font-size: 12px;	
 }
 
-.map_busstatus .status_green
+.map_status.status_hide
+{
+	display:none;
+}
+
+.map_status .status_green
 {
     border-bottom: 3px solid #28c613;
 }
 
-.map_busstatus .status_red
+.map_status .status_red
 {
     border-bottom: 3px solid #f11406;
 }
 
-.map_busstatus .status_kinds
+.map_status .status_kinds
 {
 	text-align : center;
 	width : 60px;
 }
 
-.map_busstatus .status_count
+.map_status .status_count
 {
 	text-align : center;
 	width : 30px;	
