--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -5906,3 +5906,7 @@ readers do not read off random characters that represent icons */
 .fas {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
+
+.bit_tb {
+	margin-right: 130px; margin-left: 130px; background-color: black;color: white;border-color: black;height: 200px;
+}
