[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -210,8 +210,9 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tb.calendar tr td .txt_num{position:absolute;left:5px; top:5px;}
 
 /* grid */
-.cond_abnormal {background:#F78181;}
-.cond_normal {background:#A9F5A9;}
+.cond_abnormal {background: #eb4545 !important;}
+.cond_abnormal > .w2grid_select {color: #fff !important;}
+.cond_normal {background: #ddedff;}
 .cond_neutrality {background:#fffccb;}
 .cm_gridbox{position:relative;padding:0;margin:0;}
 .cm_grid{
@@ -706,7 +707,7 @@ ul.question li a:hover {font-weight:bold;}
 .org_logo > a.logo_molit {background-position:0 0 }
 .org_logo > a.logo_kaia {background-position: -190px 0px;}
 .org_logo > a.logo_sejong {background-position: -390px 0;}
-.org_logo > a.logo_krri {background-position: -610px 0;}
+.org_logo > a.logo_krri {background-position: -617px 0;}
 
 
 
@@ -1054,12 +1055,19 @@ ul.question li a:hover {font-weight:bold;}
 /* 지도 카테고리 관련*/
 .map_wrap, .map_wrap * {margin:0; padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap {position:relative;width:100%;height:350px;}
-.category {position:absolute;top:10px;left:10px;border-radius: 5px; border:1px solid #909090;box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);background: #fff;overflow: hidden;z-index: 2;}
-.category li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 60px;}
-.category li.on {background: rgb(237, 243, 251);}
-.category li:hover {background: rgb(237, 243, 251);border-left:1px solid #acacac;margin-left: -1px;}
+.category {position:absolute;top:10px;left:10px;border-radius: 5px;border: 1px solid #d9d9d9;box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);background: #fff;overflow: hidden;z-index: 2;}
+.category li {float:left;list-style: none;border-right: 1px solid #d9d9d9;padding: 7px 0;text-align: center;cursor: pointer;width: 68px;font-size: 11px;font-weight: bold;color: dimgrey;}
+.category li.on {/* background: #0475f4; */color: #0475f4;}
+.category li:hover {/* background: rgb(246 246 246); *//* border-left: 1px solid #d9d9d9; *//* margin-left: -1px; */font-weight: bold;text-decoration: underline;}
 .category li:last-child{margin-right:0;border-right:0;}
-.category li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
+.category li span {display: block;margin: 4px auto 5px;width: 19px;min-height: 20px;}
+.category li.on span {}
+
+.category li.on .normal_busimg{background: url(/cm/images/tmap/busstop_selected.png) no-repeat;}
+.category li.on .abnormal_busimg {background: url(/cm/images/tmap/busstop_black_select.png) no-repeat;/* background-size: contain; */}
+.category li.on .crossimg{background: url(/cm/images/tmap/cross.png) no-repeat;}
+
+
 /* .category li .category_bg {background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_category.png) no-repeat;}
 .category li .bank {background-position: -10px 0;}
 .category li .mart {background-position: -10px -36px;}
@@ -1071,20 +1079,20 @@ ul.question li a:hover {font-weight:bold;}
 
 .category li .normal_busimg
 {
-	background:url(/cm/images/tmap/busstop.png) no-repeat;
-	background-size: contain;
+	background: url(/cm/images/tmap/busstop_dis.png) no-repeat;
+	/* background-size: contain; */
 }
 
 .category li .abnormal_busimg
 {
-	background:url(/cm/images/tmap/busstop_black.png) no-repeat;
-	background-size: contain;
+	background: url(/cm/images/tmap/busstop_black_dis.png) no-repeat;
+	/* background-size: contain; */
 }
 
 .category li .crossimg
 {
-	background:url(/cm/images/tmap/cross.png) no-repeat;
-	background-size: contain;
+	background: url(/cm/images/tmap/cross_dis.png) no-repeat;
+	/* background-size: contain; */
 }
 
 .category li .voiceimg
@@ -1107,22 +1115,26 @@ ul.question li a:hover {font-weight:bold;}
 
 /* 탭관련 */
 .moni_img 
-{   position: relative;
+{
+    position: relative;
     /* top: 10px; */
     /* left: 10px; */
     width: 302px;
-    border-radius: 5px;
-    border: 1px solid #909090;
-    box-shadow: 0 1px 1px rgb(0 0 0 / 40%);
-    background: #eee;
+    border: 1px solid #d9d9d9;
+    /* box-shadow: 0 1px 1px rgb(0 0 0 / 40%); */
+    /* background: #eee; */
     overflow: hidden;
     z-index: 2;
-    bottom: 5px;}
-.moni_img li {float:left;list-style: none;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 100px;}
-.moni_img li.on {background: #fff;}
-.moni_img li:hover {background: #ffe6e6;border-left:1px solid #acacac;margin-left: -1px;}
+    bottom: 5px;
+    border-radius: 5px;
+    }
+.moni_img li {float:left;list-style: none;border-left: 1px solid #d9d9d9;padding:6px 0;text-align: center;cursor: pointer;width: 100px;color: black;}
+.moni_img li.on {background: #0475f4;color: #fff !important;border-radius: 5px;border-left: none;border-right: none;}
+.moni_img li:hover {color: #0475f4;}
 .moni_img li:last-child{margin-right:0;border-right:0;}
 .moni_img li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
+.moni_img li.on + li {border-left:none;} 
+.moni_img li:first-child {border-left:none;}
 .moni_img li .busimg
 {
 	background:url(/cm/images/tmap/bus_red.png) no-repeat;	
@@ -1252,7 +1264,7 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .map-type a.active{
-    border: 2px solid #eb4545;
+    border: 1px solid #0475f4;
 }
 
 .map-type span{
@@ -1267,8 +1279,8 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .map-type span.active{
-	color: #eb4545;	
-    font-weight: bold;	
+	color: #0475f4;
+	font-weight: bold;
 }
 
 .map-type .map-type-01::before{
