[양현우] 실시간 위치정보 모니터링 - 정류장 도착, 출발 이벤트 오버레이 추가, 클릭 오버레이 삭제, 디스패치 오버레이 변경, 버스마커 이동 로직 변경

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1020,6 +1020,9 @@ ul.question li a:hover {font-weight:bold;}
     padding: 5px 10px;
     font-size: 12px;
     font-weight: bold;
+/*     border : solid;
+    border-color : #eb4545;
+    border-width : thin; */
 }
 
 .busoverlay:nth-of-type(n) {
