[양현우] 실시간 위치정보 모니터링 - 마커 색 변경, 이벤트 오버레이 위치 변경

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -840,8 +840,8 @@ ul.question li a:hover {font-weight:bold;}
     position: relative;
 /*     bottom: 57px;
     left:2px; */
-    bottom: 45px;
-    left: -182px;
+    bottom: 42px;
+    left: -178px;
     border-radius: 6px;
     border: 1px solid #ccc;
     border-bottom: 2px solid #ddd;
@@ -994,7 +994,8 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .busoverlay {
-    background: #ffffff;
+    background: #eb4545;
+    /* background: #a13e3e; */
     position: relative;
     bottom: 57px;
     left:2px;
@@ -1012,7 +1013,7 @@ ul.question li a:hover {font-weight:bold;}
     bottom: -12px;
     width: 22px;
     height: 12px;
-    background: url(/cm/images/tmap/vertex_white.png);
+    background: url(/cm/images/tmap/vertex_red.png);
 }
 
 .busoverlay .map_title {
@@ -1021,6 +1022,7 @@ ul.question li a:hover {font-weight:bold;}
     padding: 5px 10px;
     font-size: 12px;
     font-weight: bold;
+    color : white;
 /*     border : solid;
     border-color : #eb4545;
     border-width : thin; */
@@ -1032,7 +1034,7 @@ ul.question li a:hover {font-weight:bold;}
 } 
     
 .conderror {
-    background: #eb4545;
+    background: #2b2b2b;
     color : white;
     position: relative;
     bottom: 57px;
@@ -1051,7 +1053,7 @@ ul.question li a:hover {font-weight:bold;}
     bottom: -12px;
     width: 22px;
     height: 12px;
-    background: url(/cm/images/tmap/vertex_red.png);
+    background: url(/cm/images/tmap/vertex_black.png);
 }
 
 
