[양현우] 실시간 위치정보 모니터링 - z-index 변경, 탭마다 오버레이 변경, 신호등 마커 추가, 각 탭 그리드 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -210,7 +210,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tb.calendar tr td .txt_num{position:absolute;left:5px; top:5px;}
 
 /* grid */
-.cond_abnormal {background: #eb4545 !important;}
+.cond_abnormal {/* background: #eb4545 !important; */
+				background : 	#cfa2a2 !important}
 .cond_abnormal > .w2grid_select {color: #fff !important;}
 .cond_normal {background: #ddedff;}
 .cond_neutrality {background:#fffccb;}
@@ -783,7 +784,7 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 
-.customoverlay {
+.customoverlay.busstop {
     background: #fff;
     position: relative;
     bottom: 48px;
@@ -794,7 +795,18 @@ ul.question li a:hover {font-weight:bold;}
     float: left;
 }
 
-.customoverlay .map_title {
+.customoverlay.cross {
+    background: #41417d;
+    position: relative;
+    bottom: 48px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
+}
+
+.customoverlay.busstop .map_title {
     display: block;
     text-align: center;
     padding: 5px 10px;
@@ -802,12 +814,21 @@ ul.question li a:hover {font-weight:bold;}
     font-weight: bold;
 }
 
+.customoverlay.cross .map_title {
+    display: block;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+}
+
 .customoverlay:nth-of-type(n) {
     border: 0;
     box-shadow: 0px 1px 2px #888;
 }
 
-.customoverlay:after {
+.customoverlay.busstop:after {
     content: '';
     position: absolute;
     margin-left: -12px;
@@ -816,6 +837,17 @@ ul.question li a:hover {font-weight:bold;}
     width: 22px;
     height: 12px;
     background: url(/cm/images/tmap/vertex_white.png);
+}
+
+.customoverlay.cross:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_purple.png);
 }
 
 .sttnInfopopup {
@@ -869,7 +901,18 @@ ul.question li a:hover {font-weight:bold;}
     width: 250px;	
 }
 
-.clickoverlay:after {
+.sttnInfopopup.clickoverlay:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
+}
+
+.crsInfopopup.clickoverlay:after {
     content: '';
     position: absolute;
     margin-left: -12px;
@@ -1034,7 +1077,7 @@ ul.question li a:hover {font-weight:bold;}
 } 
     
 .conderror {
-    background: #2b2b2b;
+    background: #2b2b2b !important;
     color : white;
     position: relative;
     bottom: 57px;
@@ -1053,7 +1096,7 @@ ul.question li a:hover {font-weight:bold;}
     bottom: -12px;
     width: 22px;
     height: 12px;
-    background: url(/cm/images/tmap/vertex_black.png);
+    background: url(/cm/images/tmap/vertex_black.png) !important;
 }
 
 
