--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -795,6 +795,17 @@ ul.question li a:hover {font-weight:bold;}
     float: left;
 }
 
+.customoverlay.sound {
+    background: #fff;
+    position: relative;
+    bottom: 48px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
+}
+
 .customoverlay.cross {
     background: #41417d;
     position: relative;
@@ -807,6 +818,14 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .customoverlay.busstop .map_title {
+    display: block;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.customoverlay.sound .map_title {
     display: block;
     text-align: center;
     padding: 5px 10px;
@@ -829,6 +848,17 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .customoverlay.busstop:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
+}
+
+.customoverlay.sound:after {
     content: '';
     position: absolute;
     margin-left: -12px;
