[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -66,6 +66,7 @@
 
 .grdc_a_20_400 {display:grid; grid-template-columns:auto 20px 400px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_450 {display:grid; grid-template-columns:auto 20px 450px;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_a_20_550 {display:grid; grid-template-columns:auto 20px 550px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_900 {display:grid; grid-template-columns:auto 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
