--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -508,7 +508,32 @@ body {
 	min-width: 894px;
 	height: 323px;
 	box-sizing: border-box;
+	position:relative;
 }
+
+.brt_visual:before {content:'';width: 87px;height: 150px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 7px;right: 194px;}
+.brt_visual:after  {
+    content:'';
+    width: 51px;
+    height: 84px;
+    display:block;
+    background: url(/cm/images/bms/car_arm.png) 0 0 no-repeat;
+    background-size:cover;
+    position:absolute;
+    bottom: 40px;
+    right: 176px;
+    animation: anim1 linear normal infinite 2s;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    }
+
+
+
+
+
+
 
 .brt_cont_lst >  li{display:block; overflow:hidden; margin-bottom:20px; }
 .brt_cont > li > ul > li:last-child {margin:0;right: 34px !important;left: inherit;}
@@ -544,11 +569,46 @@ body {
 	background-size: cover;
 	background-position: center; */
 	box-sizing: border-box;
+	position:relative;
 }
 
-.bms_visual:before {background-image: url('/cm/images/bms/bms_visual_tle.png');content:'';display:block;width: 424px;height: 88px;margin: 32px auto 8px;}
+
+
+.bms_visual:before {content:'';width: 107px;height: 200px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 30px;right: 404px;}
+.bms_visual:after  {
+    content:'';
+    width: 60px;
+    height: 99px;
+    display:block;
+    background: url(/cm/images/bms/car_arm.png) 0 0 no-repeat;
+    background-size:cover;
+    position:absolute;
+    bottom: 80px;
+    right: 380px;
+    animation: anim1 linear normal infinite 2s;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    }
+
+
+
+@keyframes anim1{
+	0%{-webkit-transform:rotate(8deg);-moz-transform:rotate(8deg);-ms-transform:rotate(8deg);-o-transform:rotate(8deg);transform:rotate(8deg)}
+	50%{-webkit-transform:rotate(-8deg);-moz-transform:rotate(-8deg);-ms-transform:rotate(-8deg);-o-transform:rotate(-8deg);transform:rotate(-8deg)}
+	100%{-webkit-transform:rotate(8deg);-moz-transform:rotate(8deg);-ms-transform:rotate(8deg);-o-transform:rotate(8deg);transform:rotate(8deg)}
+}
+
+
+
+
+
+
+
 .bms_main_link > ul {
     text-align: center;
+    margin: 153px 0 0 0;
 }
 .bms_main_link > ul > li {
     display: inline-block;
@@ -580,7 +640,7 @@ body {
 
 
 
-.bms_main_link > ul > li > a:hover {box-shadow: 0 0 15px 0 rgb(13 36 78 / 15%);}
+.bms_main_link > ul > li > a:hover {box-shadow: 0 0 15px 0 rgb(13 36 78 / 15%);     cursor: pointer;}
 .bms_main_link > ul > li a {
     width: 135px;
     height: 141px;
