--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -806,6 +806,17 @@ ul.question li a:hover {font-weight:bold;}
     float: left;
 }
 
+.customoverlay.vilot {
+    background: #fff;
+    position: relative;
+    bottom: 48px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
+}
+
 .customoverlay.sound {
     background: #fff;
     position: relative;
@@ -837,6 +848,14 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .customoverlay.incdnt .map_title {
+    display: block;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.customoverlay.vilot .map_title {
     display: block;
     text-align: center;
     padding: 5px 10px;
@@ -878,6 +897,17 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .customoverlay.incdnt:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
+}
+
+.customoverlay.vilot:after {
     content: '';
     position: absolute;
     margin-left: -12px;
