--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -939,6 +939,16 @@ ul.question li a:hover {font-weight:bold;}
     height: 12px;
     background: url(/cm/images/tmap/vertex_purple.png);
 }
+.clickoverlay:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
+}
 
 .sttnInfopopup {
     background: #fff;
