--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -86,6 +86,7 @@
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_600_20_a {display:grid; grid-template-columns:600px 20px auto;}
 .grdc_800_20_a {display:grid; grid-template-columns:800px 20px auto;}
+.grdc_870_20_a {display:grid; grid-template-columns:870px 20px auto;}
 .grdc_500_20_900_20_a {display:grid; grid-template-columns:500px 20px 900px 20px auto;}
 .grdc_500_50_a {display:grid; grid-template-columns:500px 50px auto;}
 
