--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-
+	
 html,body{margin:0;padding:0; width: 100%; height: 100%;}
 body{color:#3b3b3b;font-style:normal;-webkit-text-size-adjust:none;}
 p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,table,form,fieldset,pre{margin:0;padding:0}
@@ -239,6 +239,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid th.req{color:#e74c3c;}
 .cm_grid tr:first-child th.gridHeaderTDDefault{border-top:0;height:25px;}
 .cm_grid .gridBodyDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b}
+.cm_grid .gridBodyDefault.hideData{visibility: hidden;}
 .cm_grid .gridFooterTDDefault{background: #f7f7f7;border-width:0 0 0 0;}
 .cm_grid td.gridBodyDefault{height:25px;}
 .cm_grid button.w2inputCalendar_button {border:0; border-radius:0 !important;}
