[고병수] 시설물 모니터링, 시설물 정보 관리, 정류소 정보 모니터링

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -667,6 +667,19 @@ body {
 }
 .map_brtMain { height:351px; }
 
+.ST003_station{
+	background-image: url('/cm/images/bms/ST003_1.png');
+	background-repeat: no-repeat;
+	background-position: top;
+	position: relative;
+}
+
+.ST002_station{
+	background-image: url('/cm/images/bms/ST002_1.jpg');
+	background-repeat: no-repeat;
+	background-position: top;
+	position: relative;
+}
 
 
 .bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 50px 107px 60px 107px;}
