--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -713,7 +713,7 @@ body {
 .bms_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;position: absolute;top: 1px;left: 36px;width: 60px;height: 60px;}
 
 .brt_bus_img {
-   background-image: url('/cm/images/bms/CNG_bus.png');
+   background-image: url('/cm/images/bms/CNG_front_bus.png');
    background-repeat: no-repeat;
    background-position: top;
    position: relative;	
