[양현우] 차내장치 모니터링 css 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -239,7 +239,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid th.req{color:#e74c3c;}
 .cm_grid tr:first-child th.gridHeaderTDDefault{border-top:0;height:25px;}
 .cm_grid .gridBodyDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b}
-.cm_grid .gridBodyDefault.hideData{visibility: hidden;}
+.cm_grid .gridBodyDefault.hideData button{visibility: hidden;}
 .cm_grid .gridFooterTDDefault{background: #f7f7f7;border-width:0 0 0 0;}
 .cm_grid td.gridBodyDefault{height:25px;}
 .cm_grid button.w2inputCalendar_button {border:0; border-radius:0 !important;}
@@ -990,8 +990,8 @@ ul.question li a:hover {font-weight:bold;}
     position: relative;
 /*     bottom: 57px;
     left:2px; */
-    bottom: 45px;
-    left: -125px;
+    bottom: 42px;
+    left: -122px;
     border-radius: 6px;
     border: 1px solid #ccc;
     border-bottom: 2px solid #ddd;
