--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -167,6 +167,7 @@
 .grdr_20_2_250_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_280_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_300_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_300_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_300_40_25_20_150_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px minmax(40px, max-content) minmax(25px, max-content) 20px 150px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_450_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;}
