[백승종] 화면 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -682,19 +682,20 @@ body {
 }
 
 
-.bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 50px 107px 60px 107px;}
+.bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 50px 0px 60px 0px;}
+.bms_cont_left {margin: 0 auto; width: 250px;}
 
 .bms_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
-.bms_cont_left li ul {position:relative;overflow:hidden;height:100px;/* border: 1px solid #ced4d9; */box-sizing: border-box;padding: 22px;}
+.bms_cont_left li ul {position:relative;overflow:hidden;height:100px;/* border: 1px solid #ced4d9; */box-sizing: border-box;padding: 22px; margin: 5px 0px 5px 5px;}
 .bms_cont_left li ul li{position:absolute;left: 160px;top: 34px;font-size: 22px;}
-.bms_cont_left li.weather_temp ul li:first-child{left: 20px;width:60px;height: 60px;background:url(/cm/images/bms/sunny_icon.PNG) no-repeat left top;margin: 0;top: 20px;}
+.bms_cont_left li.weather_temp ul li:first-child{left: 20px;width:60px;height: 60px;margin: 0;top: 20px;}
 .bms_cont_left li.weather_humid ul li:first-child{left: 33px;width:60px;height: 60px;background:url(/cm/images/bms/humidity_icon.PNG) no-repeat left top;margin: 0;top: 27px;}
-.bms_cont_left li ul li.repeat{left: 88px;font-size: 22px;margin: 0;top: 32px;}
+.bms_cont_left li ul li.repeat{left: 88px;font-size: 22px;margin: 0;top: 38px;}
 .bms_cont_left li ul li .count{margin-left:20px;font-size: 33px;font-weight: bold;}
 .bms_cont_left li ul li strong{font-size:15px;vertical-align: top;margin: 2px 0 0 0;display: inline-block;}
 
-.bms_cont_right li{display:block;overflow:hidden;}
-.bms_cont_right li ul {position:relative;overflow:hidden;height:35px;line-height: 35px;width: 275px;margin: 5px 0 5px 50px;}
+.bms_cont_right li{display:block;overflow:hidden; margin: 0 auto; width: 275px;}
+.bms_cont_right li ul {position:relative;overflow:hidden;height:35px;line-height: 35px;width: 275px;margin: 5px 0 5px 0px;}
 .bms_cont_right li ul li{position:absolute; left: 120px;}
 
 .bms_cont_right li.fine_dust ul li.air_icon{right: 0;width: 25px;height: 25px;background:url(/cm/images/bms/normal_icon.PNG) no-repeat left top;top: 4px;margin: 0;display: block;left: inherit;}
