[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -88,6 +88,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .w2checkcombobox, .w2selectbox{border:1px solid #c0c0c0}
 .w2checkcombobox .w2checkcombobox_col_button, .w2selectbox .w2selectbox_col_button{width:18px; height:18px; background-image:url(/cm/images/inc/btn_select_arrow.gif); background-position:left center;}
 
+.w2calendar_footer .w2selectbox .w2selectbox_col_button{width:14px; height:14px; background-size: 85%; background-image:url(/cm/images/inc/btn_select_arrow.gif); background-position:left center;}
+
 .w2input, .w2textarea, .w2inputCalendar_divInput, .w2selectbox, .w2checkcombobox, .w2autoComplete {border:1px solid #dddddd; box-sizing:border-box;height:22px;}
 .w2input, /* .w2selectbox */ .w2checkcombobox, .w2inputCalendar {width:120px;}
 
