--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -165,6 +165,7 @@
 .grdr_20_2_150_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 150px 20px minmax(20px, max-content) 2px auto;}
 .grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
 .grdr_20_2_200_25_20_20_50_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 25px 20px minmax(20px, max-content) 50px auto;}
+.grdr_20_2_220_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 220px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_250_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_280_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_300_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
