--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -115,6 +115,7 @@
 .grdr_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto;}
 .grdr_41_36_a {display:grid; grid-template-rows: minmax(41px, max-content) minmax(36px, max-content) auto;}
 .grdr_36_a_40 {display:grid; grid-template-rows: minmax(36px, max-content) auto minmax(40px, max-content); }
+.grdr_36_a_100_40 {display:grid; grid-template-rows: minmax(36px, max-content) auto minmax(100px, max-content) minmax(40px, max-content); }
 .grdr_25_a_40 {display:grid; grid-template-rows: minmax(25px, max-content) auto minmax(40px, max-content); }
 .grdr_36_a {display:grid; grid-template-rows: minmax(36px, max-content) auto; }
 .grdr_a_40 {display:grid; grid-template-rows: auto minmax(40px, max-content); }
