[양현우] 돌발 추가시 incdnt_id 추가, 공통 레이아웃 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -94,6 +94,7 @@
 .grdc_500_20_900_20_a {display:grid; grid-template-columns:500px 20px 900px 20px auto;}
 .grdc_500_20_600_20_a {display:grid; grid-template-columns:500px 20px 600px 20px auto;}
 .grdc_500_50_a {display:grid; grid-template-columns:500px 50px auto;}
+.grdc_380_50_a {display:grid; grid-template-columns:380px 50px auto;}
 
 .grdc_a_20_a {display:grid; grid-template-columns:auto 20px auto;}
 
