--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1287,6 +1287,29 @@ ul.question li a:hover {font-weight:bold;}
 .stat_pnctlty li.on + li {border-left:none;} 
 .stat_pnctlty li:first-child {border-left:none;}
 
+/* 시설 유지보수 통계 탭관련 */
+.stat_fclt
+{
+    position: relative;
+    /* top: 10px; */
+    /* left: 10px; */
+    width: 302px;
+    border: 1px solid #d9d9d9;
+    /* box-shadow: 0 1px 1px rgb(0 0 0 / 40%); */
+    /* background: #eee; */
+    overflow: hidden;
+    z-index: 2;
+    bottom: 5px;
+    border-radius: 5px;
+    }
+.stat_fclt li {float:left;list-style: none;border-left: 1px solid #d9d9d9;padding:6px 0;text-align: center;cursor: pointer;width: 100px;color: black;}
+.stat_fclt li.on {background: #0475f4;color: #fff !important;border-radius: 5px;border-left: none;border-right: none;}
+.stat_fclt li:hover {color: #0475f4;}
+.stat_fclt li:last-child{margin-right:0;border-right:0;}
+.stat_fclt li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
+.stat_fclt li.on + li {border-left:none;} 
+.stat_fclt li:first-child {border-left:none;}
+
 /* 신호 통계 탭관련 */
 .stat_sgn
 {
