--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1264,6 +1264,29 @@ ul.question li a:hover {font-weight:bold;}
 	background-size: contain;
 }
 
+/* 운행 디스패치 탭관련 */
+.stat_dsptch
+{
+    position: relative;
+    /* top: 10px; */
+    /* left: 10px; */
+    width: 302px;
+    border: 1px solid #d9d9d9;
+    /* box-shadow: 0 1px 1px rgb(0 0 0 / 40%); */
+    /* background: #eee; */
+    overflow: hidden;
+    z-index: 2;
+    border-radius: 5px;
+    }
+    
+.stat_dsptch li {float:left;list-style: none;border-left: 1px solid #d9d9d9;padding:6px 0;text-align: center;cursor: pointer;width: 100px;color: black;} 
+.stat_dsptch li.on {background: #0475f4;color: #fff !important;border-radius: 5px;border-left: none;border-right: none;}
+.stat_dsptch li:hover {color: #0475f4;}
+.stat_dsptch li:last-child{margin-right:0;border-right:0;}
+.stat_dsptch li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
+.stat_dsptch li.on + li {border-left:none;} 
+.stat_dsptch li:first-child {border-left:none;}
+
 /* 운행 정시성 탭관련 */
 .stat_pnctlty
 {
